added notes to lecture 3

--- a/Lectures/Lecture03_Monte_Carlo_Integration.ipynb
+++ b/Lectures/Lecture03_Monte_Carlo_Integration.ipynb
@@ -693,6 +693,9 @@
     "\n",
     "p = lambda x: np.exp(-x)  # our distribution\n",
     "g = lambda x: 1/(x+1)  # our proposal pdf (we're thus choosing M to be 1)\n",
+    "#notes:\n",
+    "#CDFg = lambda x: np.log(x+1)\n",
+    "#invCDFg is not the inverse CDF as the above example. invCDFg here is simply the CDF of g\n",
     "invCDFg = lambda x: np.log(x +1) # generates our proposal using inverse sampling\n",
     "\n",
     "# domain limits\n",
@@ -700,6 +703,7 @@
     "xmax = 10 # the upper limit of our domain\n",
     "\n",
     "# range limits for inverse sampling\n",
+    "#find the range for the CDF of g\n",
     "umin = invCDFg(xmin)\n",
     "umax = invCDFg(xmax)\n",
     "\n",
@@ -712,8 +716,11 @@
     "while (accepted < N):\n",
     "    \n",
     "    # Sample from g using inverse sampling\n",
-    "    u = np.random.uniform(umin, umax)\n",
-    "    xproposal = np.exp(u) - 1\n",
+    "    #this step is drawing from g(x) as discussed in the lecture notes\n",
+    "    u = np.random.uniform(umin, umax) #choose a number from the range according to uniform distribution\n",
+    "    xproposal = np.exp(u) - 1 #this step computes the inverse ie. finding the x that produced the u\n",
+    "    # u = log(x+1)\n",
+    "    # Therefore, x = exp(u) - 1\n",
     "    \n",
     "    # pick a uniform number on [0, 1)\n",
     "    y = np.random.uniform(0,1)\n",
