--- a/Lectures/Lecture03_Monte_Carlo_Integration.ipynb
+++ b/Lectures/Lecture03_Monte_Carlo_Integration.ipynb
@@ -446,6 +446,7 @@
     "    Ivmc[k] = (xmax-xmin)*np.mean(f(x))\n",
     "\n",
     "\n",
+    "    \n",
     "# ============================================\n",
     "# IMPORTANCE SAMPLING \n",
     "# ============================================\n",
@@ -462,6 +463,7 @@
     "    normal = normfun(np.pi)-normfun(0);\n",
     "    # computing our estimates\n",
     "    Iis[k] = np.mean(f(xis)/p(xis))*normal;\n",
+    "    #the 1/(b-a) is cancelled out by the uniform distribution (see notes)\n",
     "\n",
     "\n",
     "plt.subplot(1,2,2)\n",
@@ -469,7 +471,16 @@
     "plt.hist(Iis,30, color='r', histtype='step', label=u'Importance Sampling');\n",
     "plt.ylim(0,140) \n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#2 ways:\n",
+    "#1. truncate the gaussian and renormalize it\n",
+    "#2. don't truncate the gaussian but set f(x) to zero for x > pi\n",
+    "\n",
+    "#to find the importance distribution, can do the taylor expansion of f(x) and take the first few terms\n",
+    "\n",
+    "#the variance of f(x)/p(x) seems to increase under uniform sampling of x. however, now we are sampling from the\n",
+    "#gaussian distribution, hence the var = var(f(x)/p(x) * gaussian)"
    ]
   },
   {
