--- a/Lectures/Lecture04_Variance_Reduction_Methods.ipynb
+++ b/Lectures/Lecture04_Variance_Reduction_Methods.ipynb
@@ -82,7 +82,7 @@
     "g = lambda x: np.exp(-x)+0.2;\n",
     "# anti-derivative for testing \n",
     "fint = lambda z: z/5.0+ 0.5*np.exp(-z)*(np.sin(z)-np.cos(z))\n",
-    "# anit-derivative to estimate tau\n",
+    "# anit-derivative to estimate tau (of the control variate)\n",
     "fint_vr = lambda z: z/5.0 - 1/np.exp(z)  \n",
     " "
    ]
@@ -237,7 +237,7 @@
     "\n",
     "print \"Variance of Y1: \", np.var(Y1)\n",
     "print \"Variance of Y2: \", np.var(Y2)\n",
-    "print \"Correlation of Y1 and Y2: \", np.corrcoef(Y1,Y2)[0,1]\n",
+    "print \"Correlation of Y1 and Y2: \", np.corrcoef(Y1,Y2)[0,1] #this gives a 2x2 matrix. take the top right\n",
     "\n",
     "plt.scatter(Y1, Y2)\n",
     "plt.xlabel(\"Y1\")\n",
