--- a/Lectures/Lecture07_MCMC.ipynb
+++ b/Lectures/Lecture07_MCMC.ipynb
@@ -344,6 +344,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Without the rejection, samples < 0 or > 1 could be obtained. However, if x_star < 0 or x_star > 1, then P(x_star) would be < 0. Therefore, P(x_star)/P(x_prev) < 0 and the x_star would never be accepted AND the x_prev would be re-sampled in that iteration. However, if we explicitly code it such that we stayed within the bounds, x_star < 0 or x_star > 1 would not appear BUT **we would also not re-sample x_prev** because the code tries to find a x_star that in within the bounds. Hence, we would need to normalize the function if we truncated it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Bioassay experiment\n",
     "\n",
     "We demonstrate this with an example and examine the convergence of the resulting samples. \n",
@@ -401,6 +408,13 @@
     "$$ p(\\alpha, \\beta \\vert y) \\propto p(\\alpha, \\beta) \\prod_{i=1}^{k} p(y_i \\vert \\alpha, \\beta, n_i, x_i) $$\n",
     "$$ = 1 \\prod_{i=1}^{k} [{\\rm logit}^{-1}(\\alpha+\\beta x_i)]^{y_i} [ 1-{\\rm logit}^{-1}(\\alpha+\\beta x_i)]^{n_i-y_i} $$\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: the probability p of success (in this case, success is death), is given by p = ${\\rm logit}^{-1}(\\alpha+\\beta x_i)$"
    ]
   },
   {
