--- a/Lectures/Lecture06_Bayes_Part_II_andMarkov_Chains.ipynb
+++ b/Lectures/Lecture06_Bayes_Part_II_andMarkov_Chains.ipynb
@@ -10,11 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
