--- a/Homework/AM207_JOSHUAMEI_HW4.ipynb
+++ b/Homework/AM207_JOSHUAMEI_HW4.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 801,
    "metadata": {
     "collapsed": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 715,
+   "execution_count": 817,
    "metadata": {
     "collapsed": false
    },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 818,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +381,7 @@
        "          6.61284246e-03,   8.35538269e-03,   8.75953047e-03]])"
       ]
      },
-     "execution_count": 716,
+     "execution_count": 818,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 721,
+   "execution_count": 820,
    "metadata": {
     "collapsed": false
    },
@@ -514,25 +514,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " [-----------------100%-----------------] 10001 of 10000 complete in 2314.3 sec"
+      "[  6.56010744e-07   6.52344934e-07   6.21438957e-07 ...,   1.54930007e-07\n",
+      "   1.54815484e-07   1.48052128e-07]\n"
      ]
     }
    ],
    "source": [
-    "a_Z = pm.MvNormalCov('params',mu=np.zeros(M+1),C=Sigma)\n",
+    "# Z = pm.MvNormal('params',mu=np.zeros(M+1),C=Sigma)\n",
+    "Z = pm.MvNormal('Z',np.zeros(M),np.linalg.inv(Sigma[1:,1:]))\n",
+    "a = pm.Normal('a',0,1)\n",
     "\n",
-    "# create the likelihood\n",
-    "@pm.observed\n",
-    "def log_lik_pymc(parameters = a_Z,value = checkins):\n",
-    "    loglikelihood = 0\n",
-    "    for i in range(len(value)):\n",
-    "        rate = w**2*np.exp(parameters[0] + parameters[i+1]) # parameters[0] is alpha, parameters[i+1] is z_i\n",
-    "        loglikelihood += pm.poisson_like(value[i],mu=rate)\n",
+    "@pm.deterministic\n",
+    "def get_rate(a = a, Z = Z):\n",
+    "    return w**2*np.exp(a + Z)\n",
+    "\n",
+    "# # create the likelihood\n",
+    "# @pm.observed\n",
+    "# def log_lik_pymc(parameters = a_Z,value = checkins):\n",
+    "#     loglikelihood = 0\n",
+    "#     for i in range(len(value)):\n",
+    "#         rate = w**2*np.exp(parameters[0] + parameters[i+1]) # parameters[0] is alpha, parameters[i+1] is z_i\n",
+    "#         loglikelihood += pm.poisson_like(value[i],mu=rate)\n",
     "    \n",
-    "    return loglikelihood\n",
+    "#     return loglikelihood\n",
     "\n",
-    "params_pymc = [a_Z, log_lik_pymc] # include the parameters that need to be varied in the pymc run\n",
-    "model=pm.Model(params_pymc)\n",
+    "likelihood = pm.Poisson('likelihood', mu = get_rate, value = checkins, observed=True )\n",
+    "model=pm.Model(a_Z, get_rate, likelihood)\n",
     "mcmc = pm.MCMC(model)\n",
     "mcmc.sample(iter=10000, burn=1000,thin=5)"
    ]
@@ -545,12 +552,81 @@
    },
    "outputs": [],
    "source": [
-    "alpha_trace = []\n",
-    "for i in params:\n",
-    "    alpha_trace.append(i[0])\n",
-    "plt.plot(alpha_trace)    \n",
+    "zeroes = np.zeros(M)\n",
+    "\n",
+    "precision_matrix = np.linalg.inv(sigma)\n",
+    "\n",
+    "#z = pm.MvNormal( \"z\", zeroes, sigma[1:,1:] )\n",
+    "z = pm.MvNormal( \"z\", zeroes, precision_matrix[1:, 1:] )\n",
+    "a = pm.Normal(\"a\", 0, 1)\n",
+    "w = 0.005\n",
+    "\n",
+    "#our theta \n",
+    "@pm.deterministic\n",
+    "def mu(w = w, z=z, a = a):\n",
+    "    temp = np.exp(a+z)\n",
+    "    result = w**2 *temp\n",
+    "    #temp2 = a+z\n",
+    "    #result = temp2 + np.log(w**2)\n",
+    "    #print a\n",
+    "    #print z[0]\n",
+    "    #print result\n",
+    "    return result\n",
+    "\n",
+    "likelihood = pm.Poisson('likelihood', mu=mu, value = checkins, observed=True )\n",
+    "response_model=pm.Model([a, z, likelihood])\n",
+    "mcmc = pm.MCMC(response_model)\n",
+    "mcmc.sample(iter=10000, burn=1000, thin = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 814,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'MvNormalCov' object has no attribute 'trace'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-814-1b7d5791d81f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0malpha_trace_pymc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma_Z\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0malpha_trace_pymc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha_trace_pymc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MvNormalCov' object has no attribute 'trace'"
+     ]
+    }
+   ],
+   "source": [
+    "alpha_trace_pymc = []\n",
+    "for i in a_Z.trace():\n",
+    "    alpha_trace_pymc.append(i[0])\n",
+    "plt.plot(alpha_trace_pymc)    \n",
     "plt.figure()\n",
-    "plt.hist(alpha_trace)"
+    "plt.hist(alpha_trace_pymc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 793,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2001,)"
+      ]
+     },
+     "execution_count": 793,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_Z.trace()[0].shape"
    ]
   },
   {
@@ -664,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 722,
+   "execution_count": 822,
    "metadata": {
     "collapsed": false
    },
@@ -681,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 823,
    "metadata": {
     "collapsed": true
    },
@@ -710,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 724,
+   "execution_count": 824,
    "metadata": {
     "collapsed": true
    },
@@ -725,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 837,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -735,7 +811,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iterations 945\n"
+      "Iterations 972\n"
      ]
     }
    ],
@@ -776,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 838,
    "metadata": {
     "collapsed": false
    },
@@ -785,18 +861,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is the affine transformation matrix: \n"
+      "This is the affine transformation matrix A: \n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "array([[  9.23982715e-01,  -3.82589432e-01,   5.37764278e-17],\n",
-       "       [  3.82610196e-01,   9.23838366e-01,  -5.03069808e-17],\n",
-       "       [ -4.90857459e-05,  -4.89204518e-06,   1.00000000e+00]])"
+       "       [  3.82610196e-01,   9.23838367e-01,   1.73472348e-18],\n",
+       "       [ -4.90857672e-05,  -4.89205339e-06,   1.00000000e+00]])"
       ]
      },
-     "execution_count": 735,
+     "execution_count": 838,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 839,
    "metadata": {
     "collapsed": false
    },
@@ -942,7 +1018,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAeIAAAHhCAYAAACyfb0NAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH1NJREFUeJzt3X1w1PW59/FPQtgllNAApdhjjWWaUZoTxhZjjtU6GksI\nWBwfFkliEqllbNIMvVFjgxqOIppG7S0+zAmylalVIGwoCYPSowE041jOmRL14NwUtQZzTxRFIYam\nYWKyMXv+QKnWEJLNL3vt7u/9+keT7MMVZfjs9X1MCIVCIQEAABOJ1gUAAOBmBDEAAIYIYgAADBHE\nAAAYIogBADBEEAMAYCgpnCf19/frzjvv1KFDhxQMBlVWVqbLL7/c6doAAIh7YQXxM888oylTpujB\nBx/U3/72N1199dUEMQAAYQgriBcsWKD58+dLkgYGBpSUFNbLAADgemElaHJysiSpu7tby5cv1y23\n3DLk4z/55BPt379f06dP17hx48J5SwAAYsann36qI0eOKDMzUxMmTBjysWG3sh988IGWLVum4uJi\nXXHFFUM+dv/+/SoqKgr3rQAAiEmbNm1SVlbWkI8JK4iPHj2qpUuX6q677tKFF1542sdPnz79ZEFn\nnHFGOG8JAEDMOHz4sIqKik7m31DCCmK/36+uri6tXbtWtbW1SkhI0Pr16+XxeAZ9/OfD0WeccYa+\n/e1vh/OWAADEnOFMx4YVxFVVVaqqqgrnqQAA4As40AMAAEMEMQAAhghiAAAMEcQAABgiiAEAMEQQ\nAwBgiCAGAMStN998U2vXrj3lz/v6+vSHP/zhlD/v7+9XZWWlioqKtHjxYr344ouO18htDQCAMTUw\nMKCHH35eb73Vr9mzvVq2bJ4SEhIi8t6zZs3SrFmzTvnzjz76SFu3btV111036M8jcdsgQQwAGFMV\nFVv16KPzFAqlKjHxqA4f3qbq6mtH9Zrbtm3T7t27dfz4cR07dkzl5eWaNGmSHnnkEXm9Xk2ZMkW/\n/vWvdeDAAQUCAa1Zs0bz5s3T+eefr7a2Nn3jG9/QY489Jr/fr4MHD2rt2rW68MIL9cADD2j8+PGa\nMGGCHnvssYjcNkgQAwDG1EsvTVAolCpJGhj4hl56yZno+eSTT/T73/9eHR0duu6665SYmKjNmzdr\n+vTp2rBhg2pra5WTk3Oy+37vvfe0YcMGzZgxQ4WFhdq/f7/Kysr09ttvq7y8XA8++KAWLFigJUuW\n6IUXXlBXV9fJ+xGGe9tgOJgjBgCMqcmTe7/0dUpK7ykeOTIXXHCBJGnatGmaOHGixo8ff/KShays\nLB08ePBLj586dapmzJghSfrWt76l3t4v11FWVqYPP/xQS5Ys0c6dO092vx988IGWLFmia6655rS3\nDYaDIAYAjKlVq2Zp1qxtSkr6f8rMbNCqVbMded2//OUvkk7cCNjT06NgMKgjR45Ikvbu3avvfOc7\np32NxMREDQwMSDoxH+zz+fT0008rPT1d9fX16ujo0NKlS/WrX/1K11xzjSN1/zOGpgEAY+qyy2br\ntdfSdfjwYf3LvyyU1+t15HWPHDmin/70p+ru7tY999yjcePG6Ze//KUSExM1efJk3X///frrX/86\n6HM/H66eNm2agsGgHnroIeXm5qqqqkrJyckaN26cVq9erXXr1o3otsFwJIRCoZBjr3YK7733nn78\n4x/rhRde4BpEAMCobdu2TW1tbbr11lutSxnUSHKPoWkAAAwxNA0AiDljNV9rgY4YAABDBDEAAIYI\nYgAADBHEAAAYIogBAHFrtLcvfe71119XSUmJk6WdRBADAMbWa68N/fUYmjVrlsrLy0/5889vXxrK\n+vXrtXLlSgWDQafLk8T2JQDAWJsyRdqxQ1q4UNq2TcrOHvVLRur2pYkTJ+rss89WbW2tKisrHfiP\n8VUEMQBgbM2ceeKfS5dKq1dLZ57pyMtG4valiRMnKjc3V4cOHXKk5sEwNA0AGHv79kk33ij9z/84\n9pKRun1prBHEAICxtX37ieHoH/1I+td/lf7zPx152UjcvvRFY3U1A0PTAICx9ZOfSJ93lzNnSmed\n5cjLRuL2pcGe4zRuXwIAxBxuXwIAAI5gaBoAEHO4fQkAADiCjhhxqasuoLLGoFrbU5We1im/z6OU\nwgLrsgDgK+iIEZfKGoNKbujVgZYcJTf0qbRhbI6mA4DRoiNGXGptT9UB5ahJecpTkzLam61LAoBB\nEcSIS+lpnZrdElCempSvgHrSvNYlAcCgCGLEJb/Po1IlKKO9WT1pXvl9461LAoBBEcSISymFBaor\ntK4CAE6PxVoAABgiiAEAMEQQAwBgiCAGAMAQQQwAgCGCGAAAQwQxAACGCGIAAAwRxAAAGCKIAQAw\nRBADAGCIIAYAwBBBDACAIYIYAABDBDEAAIYIYgAADCVZF2Clqy6gssagWttTlZ7WKb/Po5TCAuuy\nAAAu49qOuKwxqOSGXh1oyVFyQ59KG4LWJQEAXMi1HXFre6oOKEdNylOempTR3mxdEgDAhVwbxOlp\nnZrdElCempSvgHrSvNYlAUyZAC7k2qFpv8+jHp9XGRc0q8fnld833rokgCkTwIVc2xGnFBaortC6\nCuDLmDIB3Me1QQxEI6ZMAPchiIEo4vd5VKoEZbQ3qyeNKRPADQhixJyOjmNaf3W1tvf8UGd99xM9\n/uhcTX1lr7RwoXVpo8aUCeA+rl2shdhVXv6c/v1P9+l7r3bqj1uu1JYrV0rz5lmXBQBhIYgRc9ra\nJikor+qVrybN1+aBuZLHY10WAISFIEbMmTnz7xqvXuWrXnl6XoWJu6W+PuuyACAsBDFizuOPX6F7\nf7RSb5w/RT9ZvEOLn71P2rnTuiwACAuLtRBzpk5N1YqXf6MVX/xmHCzUAuBOdMQAABgiiAEAMEQQ\nwzW66gKq+bf/oxlT1mvGlBr9Ortcf98csC4LgMsRxHCNssag2vZmyHesV75jKfr/Lb1cqgDAHIu1\n4BonLlS4Rrs0V5KUq1uV0Z5sXBUAtyOI4RrpaZ36fstGbVCJpJCuV5O60y6zLguAyzE0Ddfw+zya\nmX1ADaleNaR26zsXcKkCAHt0xHCNlMIC3VFYoDusCwGAL6AjBgDAEEEMAIAhhqaBONZVF1BZY1Ct\n7alKT+uU3+dRSmGBdVkAvoCOGIhjZY1BJTf06kBLjpIb+obeN71jhzo++Ej5+Zt1UVajHrjkNn38\n8bHIFQu4FB0xEOVG09We2DudoyblKU9NymhvPvWD583THy5epj++8pDytUX/rmq99otG1dcXOvSb\nABgMHTEQ5UbU1f6T9LRO5SugPDUpXwGlpw3R4Xo82jwwV02ar3rlKyiv2tomOfAbABjKqIL49ddf\nV0lJiVO1wGW66gK6ftEGZWc/q+sXPc25z6fQ2p6qehWoSXmqV4Fa21OH/Vy/z6Men1cZFzSrx3ea\nfdN9fSpM3K08Pa981Wu8ejVzZrcDvwGAoYQ9NL1+/Xpt375dX/va15ysBy5ystNTjma3BFSqBNUx\nCvoV6Wmdmt3yj662J8077OemFBYM/7/pzp1a/Ox9al6+Q28cnKJ7k1fqpserTvlwFoIBzgg7iM8+\n+2zV1taqsrLSyXrgIiOav3Qxv8+jUiUoo71ZPWljeBrYwoWaKn1hTvjaIR/OBynAGWEHcW5urg4d\nOuRkLXCZ0XR6bjKirjaC+CAFOINV0zATsU4PY4IPUoAzRh3EoVDIiTrgQtHa6WF4+CAFOGPUQZyQ\nkOBEHQBiDB+kAGeMavvSmWeeqUCALScAAISLAz0AADBEEAMAYIggBgDAEEEMAIAh9hEDGBGOtgSc\nRUcMYERGcxsUgK+iIwYwIhxtCTiLIAYwIhxtCTiLIAYwIhxtCTiLIAYwIhxtCTiLxVoAABgiiAEA\nMEQQAwBgiCAGAMAQQQwAgCGCGAAAQwQxAACGCGIAAAwRxAAAGCKIAQAwRBADAGCIIAYAwBBBDACA\nIYIYAABDBDEAAIYIYgAADBHEAAAYIogBADBEEAMAYIggBgDAUJJ1AcBwddUFVNYYVGt7qtLTOuX3\neZRSWGBdFgCMCh0xYkZZY1DJDb060JKj5IY+lTYErUsCgFGjI0bMaG1P1QHlqEl5ylOTMtqbrUsC\ngFEjiBEz0tM6NbsloDw1KV8B9aR5rUsCgFEjiBEz/D6PSpWgjPZm9aR55feNty4JAEaNIEbMSCks\nUF2hdRUA4CyCGMCosaIdCB9BDGDYThW4J1e0K0ezWwIqVQKjF8AwEcRwLbq4kTtV4LKiHQgf+4jh\nWuxLHrnW9lTVq0BNylO9CtTanirpxIr2fP1jRXt62jHjSoHYQUcM16KLG7lTbSFjRTsQPoIYrsW+\n5JE7VeCyoh0IH0EM14q2Li4W5qwJXMB5BDFcK9pChZXHgDsRxECUcGLOOha6agBfxqppIEo4sfKY\nleBA7KEjBqKEE3PWrAQHYg9BDEQJJ+asWQkOxB6CGIgj0bYSHMDpEcRAHIm2leAATo/FWgAAGCKI\nAQAwRBADAGCIIAYAwBBBDACAIYIYAABDBDEAAIYIYgAADBHEAAAYIogBADBEEAMAYIggBgDAEEEM\nAIAhghgAAEMEMQAAhghiAAAMEcQAABhKsi4AkKSuuoDKGoNqbU9Velqn/D6PUgoLrMsCgDFHR4yo\nUNYYVHJDrw605Ci5oU+lDUHrkgAgIuiIERVa21N1QDlqUp7y1KSM9mbrkhAhjIbA7eiIERXS0zqV\nr4Dy1KR8BZSedsy6JEQIoyFwOzpiRAW/z6NSJSijvVk9aV75feMj+v50ZXYYDYHbEcSICimFBaor\ntHv/k12ZcjS7JaBSJZjW4ybpaZ2a3fKP0ZCeNK91SUBEEcSA6MosWY+GANYIYkB0ZZasR0MAawQx\nILoyAHYIYkB0ZQDsEMRwFKuPAWBk2EcMR7EnFABGho4YjmL1MQCMDEEMR7H6GABGhiCGo1h9DAAj\nE1YQh0IhrVq1Sm+99ZY8Ho+qq6t11llnOV0bYhCrjwFgZMJarLV792719fUpEAiooqJCNTU1TtcF\nAIArhBXEr776qi655BJJ0nnnnaf9+/c7WhQAAG4RVhB3d3crJSXl5NdJSUkaGBhwrCgAANwirDni\nSZMm6fjx4ye/HhgYUGIiW5IBp3FAChD/wkrPOXPm6KWXXpIk7du3T+ecc46jRQE4gQNSgPgXVkec\nm5urPXv2qKDgxCdzFmsBY4MDUoD4F1YQJyQk6J577nG6FgD/hANSgPjHgR5AFOOAFCD+EcRAFOOA\nFCD+EcRADGD1NBC/2HMExABWTwPxi44YiAGsngbiF0EMxABWTwPxiyAGwhTJeVtWTwPxiyAGwnRy\n3lY5mt0SUKkSxmyFM6ungfhFEEMSq3LDwbwtACcQxJAU2e4uXkT7vC0froDYwPYlSDrR3dWrQE3K\nU70K1Nqeal1S1PP7POrxeZVxQbN6fNE3b8uWJyA20BFDUvR3d9Eo2udtGToHYgNBDEmsyo1HfLgC\nYgNBDEnR391h5Ib74Yq5ZMAWQQzEqeF+uGKhHmCLIAZcjrlkwBZBDMQop4aUmUsGbLF9CYhRTm1P\nivZtWEC8oyMGYpRTQ8qjWag36q58xw5p3jzJ45H6+qSdO6WFC8MrBohRdMRAjEpP61S+/jGknJ52\nLOI1jLYr7zg/W+suXqZLz9+idRcv08dZ2WNUKRC96IiBGBUNe79H25WX3/yC/vjKQ2rSfOXpeTUv\n36H6epZsw10IYiBGRcPe79Eu9Hr3oFf52vLZ8+v1xsEpY1QpEL0YmgYQttEu9Loq+b+0QcU6rkna\noGJdlfzfY1QpEL3oiAGEbbRd+U3bV+q1XzSqrW2SZs7s1k2PVzlXHBAjCGIAZqZOTWVOGK5HEAMY\nMc6nBpzDHDGAEeOuY8A5dMQARozzqQHnEMQARozzqQHnEMQAhjTYfHA0HCYCxAuCGMCQBr2veGuJ\n+WEiQLwgiAEHxPMqYuaDgbHFqmnAAfG8ijgaLpcA4hkdMeAA665xLDty5oOBsUUQAw6wXkU86Dyu\nQ3O40XC5BBDPCGLAAdZdo3VHDiB8BDHgAOuu0bojBxA+ghiIA9YdOYDwEcRAHLDuyGNdPG8/Q/Rj\n+xIA14vn7WeIfnTEgOiI3I7FbrBERwyIjsjtOLQEluiIAdERuR2L3WCJIAbE9h+3Y7EbLBHEgOiI\nANghiAHREQGww2ItAAAMEcQAABgiiAEAMEQQAwBgiCBGZO3YIfX1nfj3vr4TXwOAixHEiKiO87O1\n7uJluvT8LVp38TJ9nJVtXRIAmGL7EiKq/OYX9MdXHlKT5itPz6t5+Q7V17NvCIB7EcSIqHcPepWv\nLZ+dYFWvNw5OsS4JcAQXhyBcDE0joq5K/i9tULGOa5I2qFhXJf+3dUmAI7g4BOGiI0ZE3bR9pV77\nRaPa2iZp5sxu3fR4lXVJgCO4OAThIogRUVOnpjInjLjExSEIF0EMAA7g4hCEiyAGAAdwcQjCxWIt\nDKqj45jy8zcrO/tZ5efX6eOPj1mXBABxiY4Yg1p/dbW2/ek+BeXVvpZezXl/pVa8/BvrsgAg7tAR\nY1Dbe36oEm3U19StEm3U9p4fWpd0Sl11AV2/aIOys5/V9Yue1t83B6xLAoBhI4gxqLO++4nqtVhN\nylO9Fuus7/Zal3RK7N8EEMsYmsagHn90rra8U6E7B5br/yZWaPGj91mXdErs3wQQywhiDGrqK3tV\ntuc/VObxSH1XSzt3SgsXWpc1KPZvAohlBDEG98XQ9XiiNoQl9m8CiG0EMWIe+zcBxDIWawEAYIgg\nBgDAEEEMAIAhghgAAEMEMQAAhlg1HYW66gIqawyqtT1V6Wmd8vs8SikssC4LADAG6IijEEc2AoB7\n0BFHIY5sBAD3IIijEEc2AoB7EMRRiCMb3YP1AAAI4ijEkY3ucXI9gHI0uyWgUiXw/x5wGYIYMMR6\nAAAEMWCI9QAACGLAEOsBAIwqiHft2qXnn39eDz30kFP1AK7CegAAYQdxdXW19uzZo+9973tO1gMA\ngKuEfbLWnDlztGrVKgdLAQDAfU7bEW/dulVPPfXUl75XU1OjBQsWaO/evWNWGAAAbnDaIF60aJEW\nLVoUiVoAAHAdLn0AAMAQQQwAgKFRbV/Kzs5Wdna2U7UAX8FZzADiHR0xohp3MwOId5yshajGWcwA\n4h1BjKjGWcwA4h1BjKjGWcwA4h1BjKjGWcwA4h2LtQAAMEQQAwBgiCAGAMAQQQwAgCGCGAAAQwQx\nAACGCGIAAAwRxAAAGCKIAQAwRBADAGCIIy4BmOG+aYCOGIAh7psG6IgBGOK+aYAgBmCI+6YBghiA\nIe6bBghiAIa4bxpgsRYAAKboiAEHsA0HQLjoiAEHsA0HQLjoiAEHsA0HQLgIYsABbMMBEC6GpgEH\n+H0e9fi8yrigWT2+2NqG09FxTA9c8itdlNWo/Pw6fXz4I2nHDuuyANegIwYcEMvbcMrLn9O2P92n\nEm1U/auLteWdCpXt+Q/rsgDXoCMGXK6tbZKC8qpe+WrSfG0emCt5PNZlAa5BEAMuN3Pm3zVevcpX\nvfL0vAoTd0t9fdZlAa5BEAMu9/jjV+jeH63UG+dP0U8W79DiZ++Tdu60LgtwDeaIAZebOjVVK17+\njVZ88ZsLF1qVA7gOHTEAAIYIYgAADBHEAAAYIogBADBEEAMAYIggBgDAEEEMAIAhghgAAEMEMQAA\nhghiAAAMEcQAABgiiAEAMEQQAwBgiCAGAMAQQQwAgCGCGAAAQwQxAACGCGIAAAwRxAAAGCKIAQAw\nRBADAGCIIAYAwBBBDACAIYIYAABDBDEAAIYIYgAADBHEAAAYIogBADBEEAMAYIggBgDAEEEMAIAh\nghgAAEMEMQAAhghiAAAMEcQAABgiiAEAMEQQAwBgiCAGAMAQQQwAgCGCGAAAQwQxAACGCGIAAAwR\nxAAAGCKIAQAwRBADAGCIIAYAwBBBDACAIYIYAABDBDEAAIaSwnlSd3e3brvtNh0/flzBYFC33367\nvv/97ztdGwAAcS+sIH7yySd10UUX6YYbblBbW5sqKirU2NjodG0AAMS9sIL4xhtvlMfjkST19/fL\n6/U6WhQAAG5x2iDeunWrnnrqqS99r6amRpmZmTpy5IgqKytVVVU1ZgUCABDPThvEixYt0qJFi77y\n/bfeeku33XabVqxYoaysrDEpDgCAeBfW0HRra6tuvvlmPfLIIzr33HOdrgkAANcIK4jXrFmjvr4+\nVVdXKxQKafLkyaqtrXW6NgBAlOmqC6isMajW9lSlp3XK7/MopbDAuqyYFlYQr1271uk6AAAxoKwx\nqOSGXh1Qjma3BFSqBNUVWlcV28IKYgCAO7W2p+qActSkPOWpSRntzdYlxTyCGAAwbOlpnZrdElCe\nmpSvgHrS2L46WgQxAGDY/D6PSpWgjPZm9aR55feNty4p5hHEAIBhSyksYE7YYVz6AACAITpiwEXY\negJEHzpiwEVObj1pyVFyQ59KG4LWJQGuR0cMuAhbT4DoQxADLsLWEyD6EMSAi7D1BIg+BDHgImw9\nAaIPi7UAADBEEAMAYIggBgDAEEEMAIAhghgAAEMEMQAAhghiAAAMEcQAABgiiAEAMEQQAwBgiCAG\nAMAQQQwAgCGCGAAAQwQxAACGCGIAAAwRxAAAGCKIAQAwRBADAGAoyboAAGOvqy6gssagWttTlZ7W\nKb/Po5TCAuuyAIiOGHCFssagkht6daAlR8kNfSptCFqXBOAzdMSAC7S2p+qActSkPOWpSRntzdYl\nAfgMQQy4QHpap2a3BJSnJuUroJ40r3VJAD5DEAMu4Pd5VKoEZbQ3qyfNK79vvHVJAD5DEAMukFJY\noLpC6yoADIbFWgAAGCKIAQAwRBADAGCIIAYAwBBBDACAIYIYAABDBDEAAIYIYgAADBHEAAAYIogB\nADBEEAMAYIggBgDAEEEMAIAhghgAAEMEMQAAhghiAAAMEcQAABgiiAEAMEQQAwBgiCAGAMAQQQwA\ngCGCGAAAQwQxAACGCGIAAAwRxAAAGCKIAQAwRBADAGCIIAYAwBBBDACAIYIYAABDBDEAAIYIYgAA\nDBHEAAAYIogBADBEEAMAYIggBgDAEEEMAIAhghgAAEMEMQAAhghiAAAMEcQAABgiiAEAMEQQAwBg\niCAGAMAQQQwAgCGCGAAAQwQxAACGksJ5Uk9PjyoqKtTV1SWPx6P7779f3/zmN52uDQCAuBdWR7xl\nyxZlZmZq48aNuvLKK/XEE084XRcAAK4QVke8ZMkShUIhSdL777+vr3/9644WBQCAW5w2iLdu3aqn\nnnrqS9+rqalRZmamlixZorffflu/+93vhnyNTz/9VJJ0+PDhUZQKAEBs+DzvPs+/oSSEPm9tw/TO\nO++otLRUu3btOuVjXnnlFRUVFY3mbQAAiDmbNm1SVlbWkI8Ja2j6t7/9rWbMmKGrrrpKEydO1Lhx\n44Z8fGZmpjZt2qTp06ef9rEAAMS6Tz/9VEeOHFFmZuZpHxtWR9zR0aEVK1aot7dXoVBIFRUV+sEP\nfhBWsQAAuNmoh6YBAED4ONADAABDBDEAAIYIYgAADEUkiHt6elReXq7i4mL97Gc/00cffRSJt40a\n3d3dKisrU0lJiQoKCrRv3z7rkkzs2rVLFRUV1mVETCgU0t13362CggLdcMMNevfdd61LirjXX39d\nJSUl1mVEXH9/vyorK1VUVKTFixfrxRdftC4pogYGBnTnnXeqsLBQRUVFam1ttS4p4jo6OnTZZZep\nra3ttI+NSBC7/UjMJ598UhdddJE2bNigmpoarV692rqkiKuurtbDDz9sXUZE7d69W319fQoEAqqo\nqFBNTY11SRG1fv16rVy5UsFg0LqUiHvmmWc0ZcoUbdq0SU888YTuvfde65Ii6sUXX1RCQoI2b96s\n5cuXa82aNdYlRVR/f7/uvvtuTZgwYViPD2sf8Ui5/UjMG2+8UR6PR9KJ/0Fer9e4osibM2eOcnNz\nVV9fb11KxLz66qu65JJLJEnnnXee9u/fb1xRZJ199tmqra1VZWWldSkRt2DBAs2fP1/Sie4wKSki\nf9VGjblz5+ryyy+XJB06dMh1f+c/8MADKiwslN/vH9bjHf/T4cSRmLFsqN//yJEjqqysVFVVlVF1\nY+9Uv/+CBQu0d+9eo6psdHd3KyUl5eTXSUlJGhgYUGKiO5Zm5Obm6tChQ9ZlmEhOTpZ04s/A8uXL\ndcsttxhXFHmJiYm6/fbbtXv3bj322GPW5URMY2Ojpk2bposvvljr1q0b3pNCEXbw4MHQ3LlzI/22\n5t58883QwoULQy+//LJ1KWb+/Oc/h2699VbrMiKmpqYm9Nxzz538+tJLL7Urxsh7770Xys/Pty7D\nxPvvvx+69tprQ42NjdalmDp69GgoJycn1NPTY11KRBQVFYWKi4tDxcXFoaysrNB1110XOnr06JDP\nich4yUiPxIw3ra2tuvnmm/XII4/o3HPPtS4HETJnzhw1Nzdr/vz52rdvn8455xzrkkyEXHhm0NGj\nR7V06VLddddduvDCC63Libjt27frww8/1M9//nN5vV4lJia6ZiRo48aNJ/+9pKREq1ev1rRp04Z8\nTkSC2OfzacWKFdq6datCoZDrFq2sWbNGfX19qq6uVigU0uTJk1VbW2tdFsZYbm6u9uzZo4KCAkly\n3Z/7zyUkJFiXEHF+v19dXV1au3atamtrlZCQoPXr159cKxLv5s2bpzvuuEPFxcXq7+9XVVWVa373\nLxrun32OuAQAwJA7xgoAAIhSBDEAAIYIYgAADBHEAAAYIogBADBEEAMAYIggBgDAEEEMAICh/wX7\nBhktlN1VEgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x16049e310>"
+       "<matplotlib.figure.Figure at 0x15ec279d0>"
       ]
      },
      "metadata": {},
