--- a/Homework/AM207_JOSHUAMEI_HW4.ipynb
+++ b/Homework/AM207_JOSHUAMEI_HW4.ipynb
@@ -431,8 +431,8 @@
    ],
    "source": [
     "# sampling using ESS\n",
-    "N_mcmc = 1000 # 10000\n",
-    "burn_in = 200 # 1000\n",
+    "N_mcmc = 10000\n",
+    "burn_in = 1000\n",
     "N = M+1\n",
     "params = ess(checkins, Sigma,log_lik, N_mcmc, burn_in, N)"
    ]
